BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/CRM_AssociazioneEsitazioniCampagne__c.object-meta.xml
<CustomObject>
    <description>Oggetto di giunzione Esitazione-Campagna</description>
    <label>Esito Campagna</label>
    <nameField>
        <displayFormat>ESITCAMP-{000000}</displayFormat>
        <label>Numero Esitazione</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Esiti Campagna</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>