BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/Campagna__c.field-meta.xml
<CustomField>
    <fullName>Campagna__c</fullName>
    <label>Campagna</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>EsitazioniCampagna</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>