BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CC_Visibile_a_operatore__c.field-meta.xml
<CustomField>
    <fullName>CC_Visibile_a_operatore__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Visibile a operatore?</label>
    <type>Checkbox</type>
</CustomField>