BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_ChannelAvailability__c.field-meta.xml
<CustomField>
    <fullName>CRM_ChannelAvailability__c</fullName>
    <label>Rendi disponibile per:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>Rete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>