BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_ChannelAvailabilityFormula__c.field-meta.xml
<CustomField>
    <fullName>CRM_ChannelAvailabilityFormula__c</fullName>
    <formula>IF(INCLUDES( CRM_ChannelAvailability__c, &quot;Contact Center&quot;), &quot;Contact Center;&quot;, null) &amp;
IF(INCLUDES( CRM_ChannelAvailability__c, &quot;Rete&quot;), &quot;Rete;&quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponibilità canale (formula)</label>
    <type>Text</type>
</CustomField>