BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_CheckEsitoSiebel__c.field-meta.xml
<CustomField>
    <fullName>CRM_CheckEsitoSiebel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check esito siebel</label>
    <type>Checkbox</type>
</CustomField>