BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_DaIncludereListaEsiti__c.field-meta.xml
<CustomField>
    <fullName>CRM_DaIncludereListaEsiti__c</fullName>
    <formula>IF(
				ISPICKVAL(CRM_TipoEsitazione__c, &quot;Default&quot;) ||
				CRM_NomeEsito__c == &quot;Da contattare&quot; || 
				CRM_NomeEsito__c == &quot;Cliente escluso&quot;, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Da includere in lista esiti</label>
    <type>Checkbox</type>
</CustomField>