BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_EsitazioneCampagna__c.field-meta.xml
<CustomField>
    <fullName>CRM_EsitazioneCampagna__c</fullName>
    <label>Nome Esitazione</label>
    <referenceTo>CRM_CampaignHesitationValues__c</referenceTo>
    <relationshipLabel>Esiti Campagna</relationshipLabel>
    <relationshipName>Associazioni_Esitazioni_Campagne</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>