BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_EsitiNonSelezionabiliFormula__c.field-meta.xml
<CustomField>
    <fullName>CRM_EsitiNonSelezionabiliFormula__c</fullName>
    <formula>CASE(CRM_NomeEsito__c,
					&quot;Non risponde 1&quot;, &quot;Non risponde 1;Non risponde 2&quot;,
					&quot;Non risponde 2&quot;, &quot;Non risponde 2;Da contattare;Da ricontattare;Da ricontattare chiamata muta&quot;,
					&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Esiti non selezionabili (formula)</label>
    <type>Text</type>
</CustomField>