BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_EsitoDuplicato__c.field-meta.xml
<CustomField>
    <fullName>CRM_EsitoDuplicato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Esito duplicato</label>
    <type>Checkbox</type>
</CustomField>