BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_EsitoVisibile__c.field-meta.xml
<CustomField>
    <fullName>CRM_EsitoVisibile__c</fullName>
    <formula>ISPICKVAL(CRM_StatoEsito__c, &quot;Attivo&quot;) &amp;&amp;
	(CONTAINS($Profile.Name, &quot;Amministratore&quot;) || CONTAINS($Profile.Name, &quot;Admin&quot;)) &amp;&amp; NOT(ISBLANK(CRM_ChannelAvailabilityFormula__c)) ||
	((CONTAINS($Profile.Name, &quot;NEC&quot;)||(CONTAINS($Profile.Name, &quot;CRM - Utente di Rete&quot;))||(CONTAINS($Profile.Name, &quot;CRM - Consulenti Finanziari&quot;))) &amp;&amp; CONTAINS(CRM_ChannelAvailabilityFormula__c, &quot;Rete&quot;)) ||
	(CONTAINS($Profile.Name, &quot;Contact Center&quot;) &amp;&amp; CONTAINS(CRM_ChannelAvailabilityFormula__c, &quot;Contact Center&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>esito visibile CC/Rete</label>
    <type>Checkbox</type>
</CustomField>