BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_HasRespondedNotFound__c.field-meta.xml
<CustomField>
    <fullName>CRM_HasRespondedNotFound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Esito risposta non presente</label>
    <type>Checkbox</type>
</CustomField>