BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_InformazioniAggiuntive__c.field-meta.xml
<CustomField>
    <fullName>CRM_InformazioniAggiuntive__c</fullName>
    <label>Motivi di rifiuto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interesse per altre tipologie di prodotti</fullName>
            </value>
            <value>
                <fullName>Possesso del prodotto presso altra banca</fullName>
            </value>
            <value>
                <fullName>Il cliente non ha le caratteristiche per questa campagna</fullName>
            </value>
            <value>
                <fullName>Cliente non disponibile</fullName>
            </value>
            <value>
                <fullName>Cliente non si fida</fullName>
            </value>
            <value>
                <fullName>Cliente chiude chiamata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>