BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_IsCampagnaSiebel__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCampagnaSiebel__c</fullName>
    <formula>ISPICKVAL(Campagna__r.CRM_OwnerSystem__c , &quot;Siebel&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Campagna Siebel</label>
    <type>Checkbox</type>
</CustomField>