BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_IsCreazioneEsitiEnded__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCreazioneEsitiEnded__c</fullName>
    <formula>Campagna__r.CRM_IsCreazioneEsitiEnded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creazione esiti default terminato</label>
    <type>Checkbox</type>
</CustomField>