BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_NomeEsito__c.field-meta.xml
<CustomField>
    <fullName>CRM_NomeEsito__c</fullName>
    <formula>CRM_EsitazioneCampagna__r.Name</formula>
    <label>Nome Esito</label>
    <type>Text</type>
</CustomField>