BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_OpportunityStage__c.field-meta.xml
<CustomField>
    <fullName>CRM_OpportunityStage__c</fullName>
    <label>Fase opportunità</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CRM_OpportunityToCreate__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Da contattare</fullName>
            </value>
            <value>
                <fullName>Non risponde 1</fullName>
            </value>
            <value>
                <fullName>Non risponde 2</fullName>
            </value>
            <value>
                <fullName>Non risponde 3</fullName>
            </value>
            <value>
                <fullName>Non raggiungibile</fullName>
            </value>
            <value>
                <fullName>Inviata Filiale</fullName>
            </value>
            <value>
                <fullName>Accettata</fullName>
            </value>
            <value>
                <fullName>Rifiutata</fullName>
            </value>
            <value>
                <fullName>In corso</fullName>
            </value>
            <value>
                <fullName>Cliente non adatto</fullName>
            </value>
            <value>
                <fullName>Prodotto venduto OAD FOL</fullName>
            </value>
            <value>
                <fullName>Respinta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>