BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_Richiamata_Genesys__c.field-meta.xml
<CustomField>
    <fullName>CRM_Richiamata_Genesys__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Richiamata Genesys automatica</label>
    <type>Checkbox</type>
</CustomField>