BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_StatoEsito__c.field-meta.xml
<CustomField>
    <fullName>CRM_StatoEsito__c</fullName>
    <label>Stato Esito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attivo</fullName>
            </value>
            <value>
                <fullName>Non Attivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>