BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/fields/CRM_TipoEsitazione__c.field-meta.xml
<CustomField>
    <fullName>CRM_TipoEsitazione__c</fullName>
    <label>Tipo di esitazione</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Esito Transitorio</fullName>
            </value>
            <value>
                <fullName>Esito Negativo</fullName>
            </value>
            <value>
                <fullName>Esito Positivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>