BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/validationRules/Esito_di_risposta_non_presente.validationRule-meta.xml
<ValidationRule>
    <fullName>Esito_di_risposta_non_presente</fullName>
    <active>true</active>
    <errorConditionFormula>CRM_HasRespondedNotFound__c</errorConditionFormula>
    <errorMessage>E&apos; obbligatorio avere almeno un esito che conferma la risposta a questa campagna.</errorMessage>
</ValidationRule>