BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/validationRules/Esito_duplicato.validationRule-meta.xml
<ValidationRule>
    <fullName>Esito_duplicato</fullName>
    <active>true</active>
    <errorConditionFormula>CRM_EsitoDuplicato__c</errorConditionFormula>
    <errorDisplayField>CRM_EsitazioneCampagna__c</errorDisplayField>
    <errorMessage>E&apos; già stato inserito un esito con questo nome per questa campagna.</errorMessage>
</ValidationRule>