BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneEsitazioniCampagne__c/validationRules/Esito_siebel_non_modificabile.validationRule-meta.xml
<ValidationRule>
    <fullName>Esito_siebel_non_modificabile</fullName>
    <active>true</active>
    <errorConditionFormula>CRM_CheckEsitoSiebel__c</errorConditionFormula>
    <errorMessage>L&apos;esito appartiene ad una campagna Siebel. Eventuali modifiche agli esiti non sono consentiti.</errorMessage>
</ValidationRule>